Modify some styling to better align items, solve the problem with Favorites button clearing the results even with no favorite Pokemons are added

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -19,10 +19,7 @@ button:focus {
 .pokemon-modal__close-button {
   @include button;
   @include box-shadow;
-
-  &:hover {
-    @include button-hover;
-  }
+  @include button-hover;
 }
 
 .search-form__input {
@@ -57,7 +54,6 @@ button:focus {
   &__input {
     border: none;
     min-width: 320px;
-    max-width: 550px;
   }
 
   &__button {
@@ -72,6 +68,7 @@ button:focus {
   margin: 1rem 1rem;
 
   &__button {
+    width: 150px;
     margin: 5px;
   }
 }
@@ -79,6 +76,7 @@ button:focus {
 .results {
   @include box-shadow;
   margin: auto;
+  margin-bottom: 1em;
   background-color: lighten($primary-color, 1%);
   border: 1px solid black;
   display: flex;
